--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,30 @@ html {
 	box-sizing: inherit;
 }
 
-body {
+.black {
 	background-color: black;
-	background-image: 
+}
+
+.asteroid {
+    position: absolute;
+    top: 150px;
+    left: 200px;
+    width: 100px;
+    height: 100px;
+
+}
+
+.ship {
+	    position: absolute;
+    top: 150px;
+    left: 80%;
+    width: 100px;
+    height: 100px;
+
+}
+.stars {
+	background-image: url(../img/stars.svg);
+	width: 100%;
+	height: 100%;
+
 }
