--- a/css/main.css
+++ b/css/main.css
@@ -42,18 +42,88 @@ html {
 	100% {-webkit-transform: rotate(360deg);}
 }
 
+@keyframes spin {
+    0% {
+    transform: rotate(0deg);
+    }
+    100% {
+    transform: rotate(360deg);
+    }
+}
+
 
 .ship {
-	    position: absolute;
+	position: absolute;
     top: 150px;
-    left: 80%;
+    left: 50%;
     width: 100px;
     height: 100px;
 
-}
-.stars {
-	background-image: url(../img/stars.svg);
-	width: 100%;
-	height: 100%;
+    -webkit-animation: hover 6s forwards infinite;
+	animation: hover 6s forwards infinite;
 
+}
+
+@-webkit-keyframes hover {
+	
+	0% {-webkit-transform: translate(0px) rotate(0deg);}
+
+	25% {-webkit-transform: translateX(6px) rotate(-5deg);}
+
+	50% {-webkit-transform: translate(10px, 75px) rotate(5deg);}
+
+	75% {-webkit-transform: translateX(6px) rotate(0deg);}
+
+	85% {-webkit-transform: rotate(5deg);}
+
+	100% {-webkit-transform: translate(0px, 0px);}
+}
+
+
+@keyframes ship {
+    0% {
+        transform: translateY(0);
+    }
+    30% {
+        transform: translateY(20px);
+    }
+    50% {
+        transform: translateX(50px);
+    }
+    70% {
+        transform: translateY(70px);
+    }
+    90% {
+        transform: translateX(30px);
+    }
+    100% {
+        transform: translateY(0px);
+    }
+}
+
+@-webkit-keyframes ship {
+    0% {
+        transform: translateY(0);
+    }
+    30% {
+        transform: translateY(20px);
+    }
+    50% {
+        transform: translateX(50px);
+    }
+    70% {
+        transform: translateY(70px);
+    }
+    90% {
+        transform: translateX(30px);
+    }
+    100% {
+        transform: translateY(0px);
+    }
+}
+
+.stars {
+	background-image: url(../images/stars.svg);
+	width: 100%;
+	height: 100vh;
 }
